force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>This object is used to track order details for a patient. The orders can be medication, lab or any inventory related orders.</description>
    <label>Order</label>
    <nameField>
        <displayFormat>OR{MMDDYYYY}{000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>