force-app/main/default/objects/Order__c/fields/Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode__c</fullName>
    <description>Represents the order associated to a specific care episode in the healthcare.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Episode</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>