force-app/main/default/objects/Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>Captures the date when the order was placed.</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>