force-app/main/default/objects/Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Specifies the type or category of the order.</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inventory Order</fullName>
            </value>
            <value>
                <fullName>Prescription Order</fullName>
            </value>
            <value>
                <fullName>Lab Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>