force-app/main/default/objects/Order__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <description>Captures the date when the order is scheduled for return.</description>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>