force-app/main/default/objects/Order__c/fields/Return_Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Initiation_Date__c</fullName>
    <description>Records the date when the return of the order was initiated.</description>
    <label>Return Initiation Date</label>
    <type>Date</type>
</CustomField>