force-app/main/default/objects/Order__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <description>Describes the reason for returning the order.</description>
    <label>Return Reason</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>